# NuzlockeTool

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  ruff.toml
NuzlockeTool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nuzlocke_tool/: __init__.py  __main__.py  command.py  config.py  constants.py  container.py  data_loader.py  events.py  logs.py  models.py  repositories.py  rules.py  services.py  utils.py
nuzlocke_tool/data/: data_loader.py  repositories.py
nuzlocke_tool/gui/: best_moves_widget.py  card_widgets.py  dialogs.py  encounters_tab.py  main_window.py  random_decision_widget.py  team_balance_widget.py
nuzlocke_tool/models/: models.py  view_models.py
nuzlocke_tool/services/: best_moves_service.py  event_service.py  game_service.py  journal_service.py  pokemon_service.py  random_decision_service.py  save_service.py  team_balance_service.py
nuzlocke_tool/utils/: utils.py
resources/: decisions.yaml  gen1_moves.yaml  gen1_pokemon.yaml  locations.yaml  rules.yaml  versions.yaml
src/: main.rs  templates.rs
src/models/: game.rs  rules.rs
src/routes/: mod.rs
static/: style.css
templates/: base.html  index.html  ruleset_details.html  ruleset_selector.html
