[project]
name = "NuzlockeTool"
authors = [{name = "T1nyTim"}]
maintainers = [{name = "T1nyTim"}]
description = "Nuzlocke tracking tool"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: AGPL-3.0-or-later",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux"
  "Programming Language :: Python",
  "Typing :: Typed"
]
dependencies = ["PyQt6 >= 6.8.1", "PyYAML >= 6.0.2", "rich >= 13.9.4"]
dynamic = ["version"]
keywords = ["Pokemon", "Nuzlocke"]

[project.scripts]
NuzlockeTool = "nuzlocke_tool.__main__:main"

[tool.setuptools]
packages = ["nuzlocke_tool"]

[tool.setuptools.dynamic]
version = {attr = "nuzlocke_tool.__version__"}

[tool.ruff]
line-length = 110
output-format = "grouped"
show-fixes = true
target-version = "py313"

[tool.ruff.lint]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "S311"]
unfixable = ["F841"]

[tool.ruff.lint.pydocstyle]
convention = "google"
