[project]
name = "NuzlockeTool"
authors = [{name = "T1nyTim"}]
maintainers = [{name = "T1nyTim"}]
description = "Nuzlocke tracking tool"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: AGPL-3.0-or-later",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux"
  "Programming Language :: Python",
  "Typing :: Typed"
]
dependencies = ["dependency-injector >= 4.46.0", "PyQt6 >= 6.8.1", "PyYAML >= 6.0.2", "rich >= 13.9.4"]
dynamic = ["version"]
keywords = ["Pokemon", "Nuzlocke"]

[project.scripts]
NuzlockeTool = "nuzlocke_tool.__main__:main"

[tool.setuptools]
packages = ["nuzlocke_tool"]

[tool.setuptools.dynamic]
version = {attr = "nuzlocke_tool.__version__"}
